adding links to the new tools

--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!doctype html>
 <html lang="en">
+
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width" initial-scale=1>
-<meta name="description" content="Official Homepage - Sable Cantus">
-<meta name="author" content="Sable Cantus">
-<link rel="stylesheet" href="styles.css">
-<title>Cantus.us - Official Homepage</title>
-<!-----------------------------------------------------
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width" initial-scale=1>
+    <meta name="description" content="Official Homepage - Sable Cantus">
+    <meta name="author" content="Sable Cantus">
+    <link rel="stylesheet" href="styles.css">
+    <title>Cantus.us - Official Homepage</title>
+    <!-----------------------------------------------------
            _     _                        _
  ___  __ _| |__ | | ___    ___ __ _ _ __ | |_ _   _ ___
 / __|/ _` | '_ \| |/ _ \  / __/ _` | '_ \| __| | | / __|
@@ -18,90 +19,97 @@
 </head>
 
 <body>
-<div class="wrap">
+    <main class="wrap">
 
-<p><span class="prompt">$ </span>
-    <span class="cmd">./homepage.sh</span><br>
-    <br>
-    Official Homepage<br>
-    =================
-</p>
-<p>
-    Hi, I'm Sable.
-</p>
-<p>
-    I have a few projects on the internet.
-</p>
-<p>
-    I enjoy playing music, coding, yoga, video games, board games,
-    and so much more.
-</p>
-<ul>
-    <li>
-        Visit my  <a href="https://cantus.us/music.html"
-            target="_blank">🎵 music page 🎸</a>
-        </li>
-    <li>
-        Take a look at my <a href="https://cantus.us/certs.html"
-            target="_blank">professional certifications</a>
-        </li>
-    <li>
-        Here is a fun d20
-        <img src="img/Purple_d20.png" height=15>
-        <a href="https://github.com/sc137/d20passphrase" target="_blank">
-            passphrase generator in python</a>
-        </li>
-    <li>
-        I use a custom 🐍 python 🐍 email system to send and manage
-        <a href="https://github.com/sc137/python-send-email"
-            target="_blank">email blasts</a>
-        </li>
-    <li>
-        This script will let you
-        <a href="https://gist.github.com/sc137/f94436f89f4c1654c4ae4d8445112f31"
-            target="_blank">'toot' to your mastodon instance</a>
-        </li>
-    <li><img src="img/tippy.png" height=15>
-        Tippy is a single page HTML5/JS
-        <a href="http://sc137.github.io/tippy/" target="_blank">
-            tip calculator app for your phone</a>
-    </li>
-    <li>
-        I make presentations using
-        <a href="https://github.com/sc137/reveal_pres_template"
-            target="_blank">markdown, pandoc, and revealjs</a>
-    </li>
-    <li>
-        Never send your private information over email. Be sure to
-        <a href="https://cantus.us/posts/encrypt-tax-docs.html"
-            target="_blank">encrypt your private documents before you send them
-                over the internet</a>
-    </li>
-    <li>
-        I use <a href="https://github.com/sc137/canvas_scripts" target="_blank">these python scripts</a>
-            to manage and update my courses in canvas
-    </li>
-</ul>
+        <p><span class="prompt">$ </span>
+            <span class="cmd">./homepage.sh</span><br>
+            <br>
+            Official Homepage<br>
+            =================
+        </p>
+        <p>
+            Hi, I'm Sable.
+        </p>
+        <p>
+            I have a few projects on the internet.
+        </p>
+        <p>
+            I enjoy playing music, coding, yoga, video games, board games,
+            and so much more.
+        </p>
+        <ul>
+            <li>
+                Take a look at my <a href="https://cantus.us/certs.html" target="_blank">professional certifications</a>
+            </li>
+            <li>
+                Here is a fun d20
+                <img src="img/Purple_d20.png" height=15>
+                <a href="https://github.com/sc137/d20passphrase" target="_blank">
+                    passphrase generator in python</a>
+            </li>
+            <li>
+                I use a custom 🐍 python 🐍 email system to send and manage
+                <a href="https://github.com/sc137/python-send-email" target="_blank">email blasts</a>
+            </li>
+            <li><img src="img/tippy.png" height=15>
+                Tippy is a single page HTML5/JS
+                <a href="http://sc137.github.io/tippy/" target="_blank">
+                    tip calculator app for your phone</a>
+            </li>
+            <li>
+                I make presentations using
+                <a href="https://github.com/sc137/reveal_pres_template" target="_blank">markdown, pandoc, and
+                    revealjs</a>
+            </li>
+            <li>
+                I use this
+                <a href="https://sc137.github.io/web-timer/" target="_blank">⏱️ Web Timer app in class to keep track of
+                    group work and breaks</a>
+            </li>
+            <li>
+                I play MTG ⚔️ Commander and
+                <a href="https://sc137.github.io/CommanderLifeTracker" target="_blank">use this Life Tracker 🎲🎲.<a>
+            </li>
+            <li>
+                <a href="https://sc137.github.io/loan-comparison-tool/" target="_blank">💲💲 Compare Loans with this
+                    Tool<a>
+            </li>
+            <li>
+                Never send your private information over email. Be sure to
+                <a href="https://cantus.us/posts/encrypt-tax-docs.html" target="_blank">encrypt your private documents
+                    before you send them
+                    over the internet</a>
+            </li>
+            <li>
+                I use <a href="https://github.com/sc137/canvas_scripts" target="_blank">these python scripts</a>
+                to manage and update my courses in canvas
+            </li>
+            <li>
+                I play guitar, trombone, and bass. Visit my <a href="https://cantus.us/music.html" target="_blank">🎵
+                    music page 🎸</a>
+            </li>
+        </ul>
 
-<p>
-    Thanks for visiting,
-</p>
+        <p>
+            Thanks for visiting,
+        </p>
 
-<p class="signature">
-    Sable
-</p>
+        <p class="signature">
+            Sable
+        </p>
+    </main>
 
-<footer>
-    <small><br>
-    &copy;<script>
-        let year = new Date();
-        document.write(year.getFullYear());
-    </script> All Rights Reserved
-    <br>
-    <span class="prompt">$ </span>
-    <i class="cmd">curl https://cantus.us/public.key<i>
-    </small>
-</footer>
-</div>
+        <footer>
+            <small><br>
+                &copy;
+                <script>
+                    let year = new Date();
+                    document.write(year.getFullYear());
+                </script> All Rights Reserved
+                <br>
+                <span class="prompt">$ </span>
+                <i class="cmd">curl https://cantus.us/public.key<i>
+            </small>
+        </footer>
 </body>
 </html>
