creating accessible courses badge

--- a/certs.html
+++ b/certs.html
@@ -38,6 +38,13 @@
       src="img/CISSP-logo-2lines.jpg" width="350px" /></a>
 </p>
 
+<h3>Creating Accessible Courses</h3>
+<ul>
+  <li>8 Week</li>
+  <li>Saddleback College</li>
+</ul>
+<a href="https://badgr.com/public/assertions/QdM5lJBWReerQDNv7mjSRQ?identity__email=scantus@saddleback.edu" target="_blank"><img src="img/accessible.png" width="200px"></a>
+
 <h3>TRAIN Machine Learning Professional Development Intensive II</h3>
 <ul>
   <li>40 hours</li>
