--- a/certs.html
+++ b/certs.html
@@ -38,6 +38,13 @@
       src="img/CISSP-logo-2lines.jpg" width="350px" /></a>
 </p>
 
+<h3>WASTC 2025 vFDW - Sam’s Cybersecurity Update for 2025</h3>
+<ul>
+  <li>6/9/25—6/13/25</li>
+  <li>Workshop topics included Machine Learning, Hacking Mobile Devices, Secure Coding, Exploit Development, and Securing Critical Infrastructure.</li>
+</ul>
+<a href="https://www.credly.com/badges/4031e0da-0094-48b5-a85b-59b8c58c645f/public_url" target="_blank"><img src="img/wastc25.png" width="200px"></a>
+
 <h3>Creating Accessible Courses</h3>
 <ul>
   <li>8 Week</li>
