--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             </li>
             <li>
                 <a href="https://sc137.github.io/loan-comparison-tool/" target="_blank">💲💲 Compare Loans with this
-                    Tool<a>
+                    Tool</a>
             </li>
             <li>
                 Never send your private information over email. Be sure to
