update emeritus page

--- a/emeritus/index.html
+++ b/emeritus/index.html
@@ -27,30 +27,17 @@
   <body>
     <header><a href="https://cantus.us/">Cantus.us</a></header>
 
-    <h1>Sable Cantus, CISSP</h1>
-
-    <img src="../img/headshot-600x600.png" width="200px" />
-
-    <p>
-      I am an associate professor teaching in the Emeritus Institute at Saddleback College. I
-      possess a Bachelor of Science in Business Management, a Master of Arts in
-      Music, and I am a Certified Information Systems Security Professional
-      (CISSP). Please review my
-      <a href="https://cantus.us/certs.html" target="_blank">
-        Professional Training &amp; Certifications
-      </a>
-      page for more information.
-    </p>
-
     <img src="saddleback.svg" width="100px"/>
-    <h2>Life and Technology</h2>
 
-    <p>I teach for the Emeritus Institute. This course is designed to cover current topics in a framework that explores fundamental technology we all use on a day-to-day basis</p>
+    <h2>ECIM 502 - INTERMEDIATE LIFE AND TECHNOLOGY INTEGRATION (EI)</h2>
 
+    <p>Monday nights 6pm—7:50pm</p>
+
+    <p>➡️ <a href="https://www.saddleback.edu/sites/default/files/2025-05/Fall_25_Emeritus_Schedule-compressed.pdf" target="_blank">View the Fall 2025 Booklet and register for classes.</a></p>
+    
     <blockquote>
-    <p>ECIM 502 - INTERMEDIATE LIFE AND TECHNOLOGY INTEGRATION (EI)</p>
-
-    <p>Designed for the older adult, intermediate concepts are introduced related to current technologies to expand skill sets through the integration of technology into life. Topics include in depth concepts on Smartphone features for Android and Iphone, Ipads, Mac computers, Chromebooks, cloud computing, and security features.</p>
+        <p>Designed for the older adult, intermediate concepts are introduced related to current technologies to expand skill sets through the integration of technology into life. Topics include in depth concepts on Smartphone features for Android and Iphone, Ipads, Mac computers, Chromebooks, cloud computing, and security features.</p>
+        <p>This is an online synchronous class with all course requirements completed via Canvas. There are required live-stream meetings during all of the days/times that are on the course schedule. </p>
     </blockquote>
     
     <p>The content in this course will span across multiple terms. Each semester will contain modules from the list below. Some modules can be thoroughly explored in a single week and some will require multiple weeks. The specific order for each semester will be listed in the syllabus.</p>
