--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Sable Cantus">
     <link rel="stylesheet" href="styles.css">
     <title>Cantus.us - Official Homepage</title>
-    <!-----------------------------------------------------
+<!-----------------------------------------------------
            _     _                        _
  ___  __ _| |__ | | ___    ___ __ _ _ __ | |_ _   _ ___
 / __|/ _` | '_ \| |/ _ \  / __/ _` | '_ \| __| | | / __|
@@ -27,65 +27,29 @@
             Official Homepage<br>
             =================
         </p>
-        <p>
-            Hi, I'm Sable.
-        </p>
-        <p>
-            I have a few projects on the internet.
-        </p>
-        <p>
-            I enjoy playing music, coding, yoga, video games, board games,
-            and so much more.
-        </p>
+
+        <p class="courses">👉 <a href="msac/index.html">Courses Offered at Mt. San Antonio College</a></p>
+
+        <p class="courses">👉 <a href="emeritus/index.html">Courses Offered at the Saddleback College Emeritus Institute</a></p>
+        
+        <p>Here are a few of my projects <a href="https://github.com/sc137/" target="_blank" title="View my github">on the internet</a><img src="img/octocat.png" height="20px">.</p>
+        
         <ul>
-            <li>
-                Take a look at my <a href="https://cantus.us/certs.html" target="_blank">professional certifications</a>
-            </li>
-            <li>
-                Here is a fun d20
-                <img src="img/Purple_d20.png" height=15>
-                <a href="https://github.com/sc137/d20passphrase" target="_blank">
-                    passphrase generator in python</a>
-            </li>
-            <li>
-                I use a custom 🐍 python 🐍 email system to send and manage
-                <a href="https://github.com/sc137/python-send-email" target="_blank">email blasts</a>
-            </li>
             <li><img src="img/tippy.png" height=15>
                 Tippy is a single page HTML5/JS
                 <a href="http://sc137.github.io/tippy/" target="_blank">
                     tip calculator app for your phone</a>
             </li>
             <li>
-                I make presentations using
-                <a href="https://github.com/sc137/reveal_pres_template" target="_blank">markdown, pandoc, and
-                    revealjs</a>
+                Use this
+                <a href="https://sc137.github.io/web-timer/" target="_blank">⏱️ Web Timer app.</a>
             </li>
             <li>
-                I use this
-                <a href="https://sc137.github.io/web-timer/" target="_blank">⏱️ Web Timer app in class to keep track of
-                    group work and breaks</a>
+                MTG ⚔️  
+                <a href="https://sc137.github.io/CommanderLifeTracker" target="_blank">Commander Life Tracker 🎲🎲.</a>
             </li>
             <li>
-                I play MTG ⚔️ Commander and
-                <a href="https://sc137.github.io/CommanderLifeTracker" target="_blank">use this Life Tracker 🎲🎲.<a>
-            </li>
-            <li>
-                <a href="https://sc137.github.io/loan-comparison-tool/" target="_blank">💲💲 Compare Loans with this
-                    Tool</a>
-            </li>
-            <li>
-                Never send your private information over email. Be sure to
-                <a href="https://cantus.us/posts/encrypt-tax-docs.html" target="_blank">encrypt your private documents
-                    before you send them
-                    over the internet</a>
-            </li>
-            <li>
-                I use <a href="https://github.com/sc137/canvas_scripts" target="_blank">these python scripts</a>
-                to manage and update my courses in canvas
-            </li>
-            <li>
-                I play guitar, trombone, and bass. Visit my <a href="https://cantus.us/music.html" target="_blank">🎵
+                Check out my (outdated) <a href="https://cantus.us/music.html" target="_blank">🎵
                     music page 🎸</a>
             </li>
         </ul>
@@ -97,6 +61,8 @@
         <p class="signature">
             Sable
         </p>
+
+        <p>Here are some <a href="https://cantus.us/certs.html" target="_blank">trainings and certifications</a>.</p>
     </main>
 
         <footer>
