--- a/emeritus/index.html
+++ b/emeritus/index.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@exampledev/new.css@1.1.2/new.min.css">
   </head>
   <body>
-    <header><a href="https://cantus.us/">Cantus.us</a></header>
+    <header><a href="https://cantus.us/">Home</a></header>
 
     <img src="saddleback.svg" width="100px"/>
 
@@ -157,8 +157,5 @@
         </tr>
     </tbody>
 </table>
- 
-    <p><em>Sable Cantus</em></p>
-    <!-- <img src="../img/CISSP-logo-2lines.jpg" width="200px" /><br /> -->
   </body>
 </html>
