put the logo back

--- a/msac/index.html
+++ b/msac/index.html
@@ -38,6 +38,8 @@
   <body>
     <header><a href="https://cantus.us/">Home</a></header>
 
+    <img src="mtsac-logo.png" width="200px">
+
     <h1>Summer 2025 Courses Offered</h1>
 
     <p>Summer courses are 6 weeks long and are offered ONLINE and ASYNCHRONOUS. Course material will be delivered throught the Canvas LMS.</p>
