--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         <p class="courses">👉 <a href="msac/index.html">Courses Offered at Mt. San Antonio College</a></p>
 
-        <p class="courses">👉 <a href="emeritus/index.html">Courses Offered at the Saddleback College Emeritus Institute</a></p>
+        <p class="courses">👉 <a href="emeritus/index.html">Courses Offered at the Saddleback Emeritus Institute</a></p>
         
         <p>Here are a few of my projects <a href="https://github.com/sc137/" target="_blank" title="View my github">on the internet</a><img src="img/octocat.png" height="20px">.</p>
         
@@ -62,7 +62,7 @@
             Sable
         </p>
 
-        <p>Here are some <a href="https://cantus.us/certs.html" target="_blank">trainings and certifications</a>.</p>
+        <p>Here are some of my <a href="https://cantus.us/certs.html" target="_blank">trainings and certifications</a>.</p>
     </main>
 
         <footer>
