--- a/msac/index.html
+++ b/msac/index.html
@@ -26,25 +26,31 @@
       } */
       .course {
         padding: 10px 15px 10px 15px;
+        box-shadow: 2px 2px rgba(211, 211, 211, 0.5);
       }
       .purple {
         border: 5px solid rgba(128, 0, 128, 0.5);
+        background-color: rgba(128, 0, 128, 0.05);;
       }
+
       .blue {
         border: 5px solid rgba(0, 0, 255, 0.5);
+        background-color: rgba(0, 0, 255, 0.05);
       }
       .green {
         border: 5px solid rgba(0, 128, 0, 0.5);
+        background-color: rgba(0, 128, 0, 0.05);
       }
       .orange {
         border: 5px solid rgba(255, 166, 0, 0.5);
+        background-color: rgba(255, 166, 0, 0.05);
       }
     </style>
   </head>
   <body>
     <header><a href="https://cantus.us/">Home</a></header>
 
-    <img src="mtsac-logo.png" width="200px">
+    <img src="img/mtsac-logo.png" width="200px">
 
     <h1>Courses at Mt. San Antonio College</h1>
     
