--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <p class="courses">👉 <a href="emeritus/index.html">Courses Offered at the Saddleback Emeritus Institute</a></p>
         
-        <p>Here are a few of my projects <a href="https://github.com/sc137/" target="_blank" title="View my github">on the internet</a><img src="img/octocat.png" height="20px">.</p>
+        <p>Here are a few of my projects <a href="https://github.com/sc137/" target="_blank" title="View my github">on github</a><img src="img/octocat.png" height="20px">.</p>
         
         <ul>
             <li><img src="img/tippy.png" height=15>
