--- a/msac/index.html
+++ b/msac/index.html
@@ -56,7 +56,7 @@
     
     <hr>
 
-    <h2>Summer 2025</h2>
+    <!-- <h2>Summer 2025</h2>
 
     <p>Summer courses are 6 weeks long and are offered ONLINE and ASYNCHRONOUS. Course material will be delivered throught the Canvas LMS.</p>
 
@@ -84,7 +84,7 @@
       <p>This course is offered asynchronously online.</p>
     </article>
 
-    <hr>
+    <hr> -->
 
     <h2 id="fall25">Fall 2025</h2>
 
