adding program info

--- a/msac/index.html
+++ b/msac/index.html
@@ -132,9 +132,98 @@
       <a href="https://automatetheboringstuff.com/" target="_blank"><img src="img/atbs.jpg" width="150px"></a>
     </article>
 
+    <h2>Programs</h2>
+
+    <article>
+      <h3>CIS Professional in Web Programming</h3>
+      <p>The CIS Professional Certificate in Web Programming provides students the programming skills to create effective web pages and web sites. The certificate offers a balanced set of classes that prepares students to design, debug and implement both client-side and server-side web programs. Emphasis is placed on acquiring programming skills in various web programming, scripting or markup languages such as JavaScript, HTML, DHTML, XHTML, XML, CSS, ASP.NET, AJAX, SQL and Perl. Students will also learn to configure and install an Apache web server in a Linux or Windows system and access a MySQL database using PHP programs. Opportunities available after the completion of this certificate include web programming or web and database server administration.</p>
+      
+      <p><b>Required Courses</b></p>
+      <table>
+        <tr>
+          <th>Course Prefix</th>
+          <th>Course Name</th>
+          <th>Units</th>
+        </tr>
+        <tr>
+          <td>CISW 17</td>
+          <td>HTML, CSS, and JavaScript Programming</td>
+          <td>3</td>
+        </tr>
+        <tr>
+          <td>CISW 24</td>
+          <td>Secure Web Server Programming in Python</td>
+          <td>3</td>
+        </tr>
+        <tr>
+          <td>CISW 24L</td>
+          <td>Secure Web Server Programming in Python Laboratory</td>
+          <td>0.5</td>
+        </tr>
+        <tr>
+          <td>CISW 31</td>
+          <td>Secure Web Server Programming in PHP</td>
+          <td>3</td>
+        </tr>
+        <tr>
+          <td>CISW 31L</td>
+          <td>Secure Web Server Programming in PHP Labortory</td>
+          <td>0.5</td>
+        </tr>
+        <tr>
+          <td colspan="2"><b>Total Units</b></td>
+          <td>10</td>
+        </tr>
+
+      </table>
+    </article>
+
+    <article>
+      <h3>CIS Professional in Cloud Computing for Amazon Web Services</h3>
+      <p>The CIS Professional Certificate in Cloud Computing for Amazon Web Services program prepares students to design solutions for Infrastructure as a Service (IaaS) architectures by provisioning computing instances, establishing virtual private networks, managing databases and storage within a secure online environment. Students produce dynamic solutions responsive to information and computing technology workloads with on-demand pay-as-you-go pricing allowing flexibility for small business, entrepreneurship, and enterprise adoption. Industry certifications are embedded to prepare for occupations in Cloud Architect, Cloud Support Associate, Cloud Engineer or Cloud Technicians. Some preparation in information technology or computer programming is recommended.</p>
+      
+      <p><b>Required Courses</b></p>
+      <table>
+        <tr>
+          <th>Course Prefix</th>
+          <th>Course Name</th>
+          <th>Units</th>
+        </tr>
+        <tr>
+          <td>CISN 71</td>
+          <td>Introduction to Cloud Computing</td>
+          <td>3</td>
+        </tr>
+        <tr>
+          <td>CISN 72A</td>
+          <td>Cloud Computing Database Essentials in Amazon Web Services</td>
+          <td>3</td>
+        </tr>
+        <tr>
+          <td>CISN 73A</td>
+          <td>Compute Engines in Amazon Web Services</td>
+          <td>3</td>
+        </tr>
+        <tr>
+          <td>CISN 74A</td>
+          <td>Security in Amazon Web Services</td>
+          <td>3</td>
+        </tr>
+        <tr>
+          <td>Elective</td>
+          <td>CISW 17, CISW 24/L, CISW 31/L, CISP21/L, or CISP 71/L</td>
+          <td>3 or 3.5</td>
+        </tr>
+        <tr>
+          <td colspan="2"><b>Total Units</b></td>
+          <td>15 or 15.5</td>
+        </tr>
+
+      </table>
+    </article>
 
 
-
+    <hr>
     <p>Learn more about the <a href="https://www.mtsac.edu/cis/degrees_certificates.html" target="_blank">degrees and certificates</a> you can earn at Mt. SAC.</p>
 
   </body>
