Update homepage fonts/styles, winter and spring courses

--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width" initial-scale=1>
-    <meta name="description" content="Official Homepage - Sable Cantus">
-    <meta name="author" content="Sable Cantus">
-    <link rel="stylesheet" href="styles.css">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" initial-scale="1" />
+    <meta name="description" content="Official Homepage - Sable Cantus" />
+    <meta name="author" content="Sable Cantus" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Fira+Code:wght@300..700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lora:ital,wght@0,400..700;1,400..700&display=swap"
+      rel="stylesheet" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Cantus.us - Official Homepage</title>
-<!-----------------------------------------------------
+    <!-----------------------------------------------------
            _     _                        _
  ___  __ _| |__ | | ___    ___ __ _ _ __ | |_ _   _ ___
 / __|/ _` | '_ \| |/ _ \  / __/ _` | '_ \| __| | | / __|
@@ -16,66 +20,98 @@
 |___/\__,_|_.__/|_|\___|  \___\__,_|_| |_|\__|\__,_|___/
 
 ------------------------------------------------------>
-</head>
+  </head>
 
-<body>
-    <main class="wrap">
+  <body>
+    <header>
+      <p>
+        <code
+          ><span class="prompt">$ </span> <span class="cmd">./homepage.sh</span
+          ><br
+        /></code>
+        <br />
+        Official Homepage<br />
+        ==============
+      </p>
+    </header>
+    <main>
+      <p class="courses">
+        👉
+        <a href="msac/index.html">Courses Offered at Mt. San Antonio College</a>
+      </p>
 
-        <p><span class="prompt">$ </span>
-            <span class="cmd">./homepage.sh</span><br>
-            <br>
-            Official Homepage<br>
-            =================
-        </p>
+      <p class="courses">
+        👉
+        <a href="emeritus/index.html"
+          >Courses Offered at the Saddleback Emeritus Institute</a
+        >
+      </p>
 
-        <p class="courses">👉 <a href="msac/index.html">Courses Offered at Mt. San Antonio College</a></p>
+      <p>
+        Here are a few of my projects
+        <a
+          href="https://github.com/sc137/"
+          target="_blank"
+          title="View my github"
+          >on github</a
+        ><img src="img/octocat.png" height="20px" />.
+      </p>
 
-        <p class="courses">👉 <a href="emeritus/index.html">Courses Offered at the Saddleback Emeritus Institute</a></p>
-        
-        <p>Here are a few of my projects <a href="https://github.com/sc137/" target="_blank" title="View my github">on github</a><img src="img/octocat.png" height="20px">.</p>
-        
-        <ul>
-            <li><img src="img/tippy.png" height=15>
-                Tippy is a single page HTML5/JS
-                <a href="http://sc137.github.io/tippy/" target="_blank">
-                    tip calculator app for your phone</a>
-            </li>
-            <li>
-                Use this
-                <a href="https://sc137.github.io/web-timer/" target="_blank">⏱️ Web Timer app.</a>
-            </li>
-            <li>
-                MTG ⚔️  
-                <a href="https://sc137.github.io/CommanderLifeTracker" target="_blank">Commander Life Tracker 🎲🎲.</a>
-            </li>
-            <li>
-                Check out my (outdated) <a href="https://cantus.us/music.html" target="_blank">🎵
-                    music page 🎸</a>
-            </li>
-        </ul>
+      <ul>
+        <li>
+          <img src="img/tippy.png" height="15" />
+          Tippy is a single page HTML5/JS
+          <a href="http://sc137.github.io/tippy/" target="_blank">
+            tip calculator app for your phone</a
+          >
+        </li>
+        <li>
+          I use this
+          <a href="https://sc137.github.io/web-timer/" target="_blank"
+            >⏱️ Web Timer app</a
+          >
+          in zoom and on the projector.
+        </li>
+        <li>
+          Try out this MTG ⚔️
+          <a href="https://sc137.github.io/CommanderLifeTracker" target="_blank"
+            >Commander Life Tracker 🎲🎲.</a
+          >
+        </li>
+        <li>
+          Are you looking for my class videos? They are available on <a href="https://www.youtube.com/@professor_sable" target="_blank">Youtube: Professor Sable</a>
+        </li>
+        <li>
+          <a
+            href="https://msac-cisw.github.io/cisw17-demos/index.html"
+            target="_blank"
+            >View the class Web Demos.</a
+          >
+        </li>
+      </ul>
 
-        <p>
-            Thanks for visiting,
-        </p>
+      <p>Thanks for visiting,</p>
 
-        <p class="signature">
-            Sable
-        </p>
+      <p class="signature">Sable</p>
 
-        <p>Here are some of my <a href="https://cantus.us/certs.html" target="_blank">trainings and certifications</a>.</p>
+      <p>
+        Here are some of my
+        <a href="https://cantus.us/certs.html" target="_blank"
+          >trainings and certifications</a
+        >.
+      </p>
     </main>
 
-        <footer>
-            <small><br>
-                &copy;
-                <script>
-                    let year = new Date();
-                    document.write(year.getFullYear());
-                </script> All Rights Reserved
-                <br>
-                <span class="prompt">$ </span>
-                <i class="cmd">curl https://cantus.us/public.key<i>
-            </small>
-        </footer>
-</body>
+    <footer>
+      &copy;
+      <script>
+        let year = new Date();
+        document.write(year.getFullYear());
+      </script>
+      All Rights Reserved
+      <br />
+      <span class="prompt">$ </span>
+      <code><i class="cmd">curl https://cantus.us/public.key</i></code>
+    </footer>
+  </body>
 </html>
