added some hyperlinks

--- a/msac/index.html
+++ b/msac/index.html
@@ -55,7 +55,7 @@
 
     <img src="img/mtsac-logo.png" width="200px" />
 
-    <h1>Courses at Mt. San Antonio College</h1>
+    <h1>My Courses at <a href="https://www.mtsac.edu/cis/" target="_blank">Mt. San Antonio College</a></h1>
 
     <hr />
 
@@ -454,5 +454,7 @@
       >
       you can earn at Mt. SAC.
     </p>
+    <hr>
+    <p>👀 Looking to enroll at Mt. SAC? <a href="https://www.mtsac.edu/#applyNow" target="_blank">➡️ Start here and apply early.</a></p>
   </body>
 </html>
